RESOLVED FIXED132462
[iOS WK2] Animations on vox.com look wrong
https://bugs.webkit.org/show_bug.cgi?id=132462
Summary [iOS WK2] Animations on vox.com look wrong
Simon Fraser (smfr)
Reported 2014-05-01 21:28:37 PDT
[iOS WK2] Animations on vox.com look wrong
Attachments
Patch (4.95 KB, patch)
2014-05-01 21:31 PDT, Simon Fraser (smfr)
sam: review+
Simon Fraser (smfr)
Comment 1 2014-05-01 21:31:21 PDT
Simon Fraser (smfr)
Comment 2 2014-05-01 21:31:46 PDT
Sam Weinig
Comment 3 2014-05-01 22:36:57 PDT
Comment on attachment 230649 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=230649&action=review > Source/WebKit2/ChangeLog:9 > + PlatformCALayerRemote was managing animations incorrectly; aninations aninations -> animations
Simon Fraser (smfr)
Comment 4 2014-05-02 10:30:32 PDT
Note You need to log in before you can comment on or make changes to this bug.